--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -10366,7 +10366,7 @@ select[disabled] {
   grid-column-gap: var(--jaa-ni-h);
   grid-template-columns: repeat(3, minmax(min-content, auto));
 }
-._i5duul {
+.explore-card__pricing-wrapper {
   -webkit-box-align: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: horizontal !important;
@@ -12281,7 +12281,7 @@ h3:first-child {
 .dir.pc0djro[class][class] {
   margin-top: 6px;
 }
-.explore-cards-details__description[class][class] {
+.explore-card__info[class][class] {
   grid-column: 1/-1;
 }
 .explore-cards--details__ratings[class][class] {
@@ -12289,7 +12289,7 @@ h3:first-child {
   grid-row: 1;
   justify-self: end;
 }
-.explore-cards-details-wrapper[class][class] {
+.explore-card__body[class][class] {
   display: grid;
   gap: var(--card-content-grid_gap, var(--h-x-sf-jw));
   grid-template-columns: var(
@@ -12301,10 +12301,10 @@ h3:first-child {
   line-height: 19px;
   --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
 }
-.explore-cards-details__price[class][class] {
+.explore-card__price[class][class] {
   grid-column: 1/-1;
 }
-.dir.explore-cards-details__price[class][class] {
+.dir.explore-card__price[class][class] {
   margin-top: 6px;
 }
 @media (min-width: 744px) {
@@ -12366,7 +12366,7 @@ h3:first-child {
   scrollbar-width: none;
   touch-action: var(--contentscroller_touch-action, pan-x pan-y pinch-zoom);
 }
-.c14dgvke[class][class] {
+.explore-card__media-container[class][class] {
   -webkit-mask-image: -webkit-radial-gradient(white, #000);
   mask-image: -webkit-radial-gradient(white, #000);
   -webkit-mask-image: -webkit-radial-gradient(white, #000);
@@ -12400,7 +12400,7 @@ h3:first-child {
 .explore-cards--details__ratings[class][class] > :not(:first-child) {
   margin-inline-start: var(--h-x-sf-jw);
 }
-.explore-cards-details__description[class][class] {
+.explore-card__info[class][class] {
   line-height: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -12410,11 +12410,11 @@ h3:first-child {
   color: var(--fo-jk-r-s);
 }
 @supports (overflow: clip) {
-  .explore-cards-details__description[class][class] {
+  .explore-card__info[class][class] {
     overflow: clip;
   }
 }
-.explore-cards-details__title[class][class] {
+.explore-card__title[class][class] {
   line-height: inherit;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -12426,7 +12426,7 @@ h3:first-child {
   word-break: var(--title_word-break, break-all);
 }
 @supports (overflow: clip) {
-  .explore-cards-details__title[class][class] {
+  .explore-card__title[class][class] {
     overflow: clip;
   }
 }
@@ -43417,12 +43417,12 @@ tr.show-desktop {
 .dir.d1sd2nyg[class][class] {
   margin-top: var(--fgg-f-l-a);
 }
-.explore-card__img-wrapper[class][class] {
+.explore-card__media[class][class] {
   --aspect_ratio_wrapper-ratio: 20/19;
   --aspect_ratio_wrapper-padding_fallback: 95%;
   --aspect_ratio_wrapper-position_fallback: relative;
 }
-.dir.explore-card__img-wrapper[class][class] {
+.dir.explore-card__media[class][class] {
   margin-bottom: var(--b-y-unon);
 }
 .c1kgn38t[class][class] {
@@ -43471,19 +43471,19 @@ tr.show-desktop {
   width: 100%;
   height: 100%;
 }
-.c14dgvke[class][class] {
+.explore-card__media-container[class][class] {
   mask-image: -webkit-radial-gradient(white, #000);
   -webkit-mask-image: -webkit-radial-gradient(white, #000);
   overflow: hidden;
   pointer-events: var(--media-container_pointer-events, auto);
   position: relative;
 }
-.dir.c14dgvke[class][class] {
+.dir.explore-card__media-container[class][class] {
   border-radius: var(--media-container_border-radius, var(--i-g-gvoq));
   background-color: var(--j-qkgmf);
 }
 @supports (overflow: clip) {
-  .c14dgvke[class][class] {
+  .explore-card__media-container[class][class] {
     overflow: clip;
   }
 }
