--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -9608,7 +9608,7 @@ select[disabled] {
     padding-right: max(80px, calc((100vw - 1600px) / 2)) !important;
   }
 }
-._1xdthmh {
+.new-card__container {
   display: block !important;
   border-radius: 12px !important;
   border: 0 !important;
@@ -9622,18 +9622,18 @@ select[disabled] {
   height: calc(1.25 * (100vw - 80px)) !important;
 }
 @media (min-width: 744px) {
-  ._1xdthmh {
+  .new-card__container {
     height: 330px !important;
   }
 }
-._1iqbn9k {
+.new-card__img-wrapper {
   position: absolute !important;
   bottom: -1px !important;
   right: -1px !important;
   left: -1px !important;
   top: -1px !important;
 }
-._1yx6eqi {
+.new-card__body {
   -webkit-box-align: start !important;
   -ms-flex-align: start !important;
   -webkit-box-direction: normal !important;
@@ -9654,39 +9654,39 @@ select[disabled] {
   padding: 20px !important;
 }
 @media (min-width: 744px) {
-  ._1yx6eqi {
+  .new-card__body {
     padding: 24px !important;
   }
 }
-._ll0s1x {
+.new-card__heading {
   -webkit-flex: 1 !important;
   -ms-flex: 1 1 0% !important;
   flex: 1 !important;
 }
 @media (min-width: 744px) {
-  ._ll0s1x {
+  .new-card__heading {
     width: 300px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._ll0s1x {
+  .new-card__heading {
     width: 235px !important;
   }
 }
-._gyi2v4 {
+.new-card__subtitle {
   font-size: 12px !important;
   line-height: 16px !important;
   font-weight: 400 !important;
   margin-bottom: 2px !important;
 }
-._1ghqbk0z {
+.new-card__title {
   font-size: 22px !important;
   line-height: 26px !important;
   font-weight: 600 !important;
   letter-spacing: -0.2px !important;
 }
 @media (min-width: 1440px) {
-  ._1ghqbk0z {
+  .new-card__title {
     font-size: 26px !important;
     line-height: 30px !important;
   }
@@ -9749,7 +9749,7 @@ select[disabled] {
     transition: none !important;
   }
 }
-.dir.t1wnqxuv[class][class] {
+.dir.new-card[class][class] {
   cursor: pointer;
 }
 .dir.l1dijiv4[class][class]:focus-visible {
