--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -55166,7 +55166,7 @@ a:hover {
   width: 100% !important;
   height: calc(100% - 70px) !important;
 }
-._ctz3yu {
+.vh-100 {
   height: 100% !important;
   width: 100% !important;
 }
