--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -26422,7 +26422,7 @@ html :where(img[class*='wp-image-']) {
 ._1xh26pm2:focus[data-focus-visible-added]:after {
   border-width: 2px !important;
 }
-._12nksyy {
+.flex-row-full-width {
   -webkit-box-lines: multiple !important;
   -webkit-box-pack: start !important;
   -ms-flex-pack: start !important;
@@ -26447,39 +26447,39 @@ html :where(img[class*='wp-image-']) {
   margin-right: auto !important;
 }
 @media (min-width: 375px) {
-  ._12nksyy {
+  .flex-row-full-width {
     padding-left: 24px !important;
     padding-right: 24px !important;
   }
 }
 @media (min-width: 744px) {
-  ._12nksyy {
+  .flex-row-full-width {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 950px) {
-  ._12nksyy {
+  .flex-row-full-width {
     padding-left: 40px !important;
     padding-right: 40px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._12nksyy {
+  .flex-row-full-width {
     padding-left: 80px !important;
     padding-right: 80px !important;
     max-width: var(--gp-bounded-column-container-max-width, 1280px) !important;
   }
 }
 @media (min-width: 1440px) {
-  ._12nksyy {
+  .flex-row-full-width {
     max-width: var(--gp-bounded-column-container-max-width, 1280px) !important;
     padding-left: 80px !important;
     padding-right: 80px !important;
   }
 }
 @media print {
-  ._12nksyy {
+  .flex-row-full-width {
     max-width: 100% !important;
     padding-left: 0 !important;
     padding-right: 0 !important;
@@ -30315,7 +30315,7 @@ html :where(img[class*='wp-image-']) {
   font-size: 16px !important;
   line-height: 20px !important;
 }
-._wgmchy {
+.flex-column {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   display: flex !important;
@@ -48902,7 +48902,7 @@ tr.show-desktop {
     line-height: 56px !important;
   }
 }
-._wgmchy {
+.flex-column {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   display: -webkit-box !important;
